css/style.css
/* ... */
#logo img{
  position: absolute;
  left: 0;
  top: -0.75rem;
  height: 20px;
  width: 20px;
  transform: rotate(-20deg);
}
.hamburger{
  display: none;
}
.hamburger ion-icon{
  font-size: xx-large;
  color: white;
}
.nav-links{
  display: flex;
  list-style-type: none;
  margin: auto 0;
}
@media (max-width:768px){
  .hamburger{
    position: fixed;
    right: 2rem;
    top: 2.25rem;
    display: block;
  }
  .hamburger.responsive{
    position: fixed;
    right: 2rem;
    top: 2.5rem;
    display: block;
  }
  body.responsive{
    overflow: hidden;
  }
  .navbar{
    transition: all ease 300ms;
  }
  .navbar.responsive{
    min-height: 100vh;
    height: auto;
    position: sticky;
    top: 0;
    left: 0;
    right: 0;
    flex-direction: column;
    z-index: 10;
  }
  #logo.responsive{
    margin-top: 2.125rem;
  }
  .nav-links{
    transition: all ease 300ms;
    transition-delay: 1s;
  }
  .nav-links.responsive{
    margin-top: 5rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: stretch;
    gap: 5rem;
    animation: slide 500ms forwards 300ms;
    transition: all ease 300ms;
    transition-delay: 1s;
  }
  @keyframes slide {
    to{
      transform: translateX(0);
      opacity: 1;
    }
  }
  .nav-links{
    transform: translateX(-100%);
    opacity: 0;
    display: none;
    width: 100%;
    margin-left: 0;
    transition: all ease 300ms;
    transition-delay: 1s;
  }
  .nav-link{
    padding: 0.75rem 0.5rem !important;
  }
}
.nav-links li{
  position: relative;
  padding: initial;
  margin: 0 1rem;
}
.nav-link{
  text-decoration: none;
  color: white;
  height: 100%;
  width: 100%;
  padding: 0.125rem 0.25rem;
  display: flex;
  align-items: center;
  justify-content: center;
  border: none;
  background-size: 300% 100%;
  background-image: linear-gradient(to right, #667eea, #764ba2, #6B8DD6, #8E37D7);
  box-shadow: 0 4px 15px 0 rgba(32, 30, 36, 0.75);
  border-radius: 4px;
  cursor: pointer;
  -o-transition: all .4s ease-in-out;
  -webkit-transition: all .4s ease-in-out;
  transition: all .4s ease-in-out;
}
.nav-link:hover{
  background-position: 100% 0;
  box-shadow: 4px 8px 20px rgba(0, 0, 0, 0.75);
  outline: 2px solid white;
  -o-transition: all .4s ease-in-out;
  -webkit-transition: all .4s ease-in-out;
  transition: all .4s ease-in-out;
}
.login-btn{
  background: #fff;
  background-color: #fff;
  color: #743ad5;
}
.login-btn:hover{
  box-shadow: 4px 8px 20px rgba(52, 35, 75, 0.75);
  outline: 2px solid #743ad5;

}

main{
  width: auto;
  margin: 0 2rem;
}
.hero{
  width: 100%;
  height: auto;
  display: flex;
  justify-content: space-around;
  align-items: center;
  margin: 2rem 0 5rem 2rem;
}
.hero-text-div{
  text-align: start;
  flex: 50%;
  line-height: 2;
}
.hero-buttons-div{
  margin: 1rem 0;
}
.hero-buttons-div .hero-btn{
  display: inline-block;
}
.hero-img-div{
  text-align: center;
  flex: 50%;
}
.hero-img{
  width:50%;
}
.welcome-username{
  white-space: nowrap;
}
@media (max-width:800px){
  main{
    margin: 0 1rem;
  }
  .hero-buttons-div .hero-btn{
    margin-bottom: 0.5rem;
  }
  .meal-of-the-day h1{
    text-align: center;
  }
  .g-meal-search-heading{
    font-size: 20px;
    text-align: center;
  }
  .hero{
    flex-direction: column-reverse;
    margin: 0;
  }
  .hero-img{
    width:25%;
  }
  .hero-text-div{
    text-align: center;
  }
}

.meal-of-the-day{
  min-height: 20vh;
  width: auto;
  margin: 2rem 2rem;
}

.global-meal-search-area{
  margin: 2rem 2rem;
}
.g-meal-search-heading{
  margin-bottom: 1rem;
  color: #743ad5;
}
#main-search-text{
  font-family: inherit;
  width: 100%;
  height: 100%;
  padding-left:35px;
  padding-right:25px;
  padding-top:0.5rem ;
  padding-bottom:0.5rem;
  outline: none;
  border: none;
  border-radius: 4px;
  background-color: white;
  color: #1b1b1b;
  outline: 1.5px solid snow;
}

#main-search-text:active{
  outline: 1.5px solid #743ad5;
}
#main-search-text:focus{
  outline: 1.5px solid #743ad5;
}

.g-meal-search-results{
  min-height: 50vh;
  height: auto;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  gap: 1rem;
  margin-top: 1rem;
}
.searched-meal-img-2{
  outline: 1.2px solid white;
  border-radius: 4px;
}

.cat {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  gap: 30px;
  margin: 1.5rem;
}
.container {
  position: relative;
  border: 1px solid #743ad5;
  border-radius: 6px;
  padding: 40px;
  text-align: center;
  min-width: 10vw;
  width: auto;
  transition: all ease 300ms;
  overflow: hidden;
}
.container::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: inherit;
  box-shadow: inset 0 0 2000px rgba(226, 225, 228, 0.5);
  border-radius: inherit;
  backdrop-filter: blur(5px);
  z-index: 2;
  opacity: 0;
  overflow: hidden;
  display: none;
  transition: all ease 300ms;
}
.container:hover:after {
  opacity: 1;
  display: block;
}
.container:hover .view-more {
  opacity: 1;
  display: block;
  z-index: 5 !important;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: #1b1b1b;
  padding: 10px;
  margin: 0;
  border-radius: 3px;
}
.container:hover .view-more button {
  display: inline-block;
  color: lightblue;
  cursor: pointer;
}
.cat-img {
  object-fit: contain;
  height: 150px;
  width: 150px;
  border-radius: 100%;
  border: solid 2px transparent;
  background-image: linear-gradient(white, white),
    radial-gradient(circle at top left, #743ad5, #d53a9d);
  background-origin: border-box;
  background-clip: content-box, border-box;
}
.info {
  position: relative;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 150px !important;
}
.view-more button {
  display: none;
  text-decoration: none;
  outline: none;
  border: none;
  background: #1b1b1b;
  padding: 2.5px 5px;
  border-radius: 4px;
}
/* ... */

